@@ -37,6 +37,7 @@ Version 1.7.15+svn:
    * Worked around bug #13333: Limit the maximum length of the mp command
      dialog as workaround for bug (This workaround is only implemented for
      Windows and Mac)
+   * Worked around a rare assertion failure when resizing the lobby
 
 Version 1.7.15-1.8rc1:
  * AI:
